@@ -11,7 +11,7 @@
 %bg0 = Spline(20.4823,43.3474,  28.004,24.3128,  31.4412,23.6984,  33.7911,36.0138,  38.6477,30.5403,  49.9335,17.263,  65.1888,17.968,  79.5965,22.1979, 98.9835,23.6079)
 Y = y - %bg0(x)
 
-A = 31 < x < 90 # only data with 2theta greater then 31.0 are active
+A = 31 < x and x < 90 # only data with 2theta greater then 31.0 are active
 
 # Used wavelength is known and we do not want to fit it.
 # If you would like to fit wavelength, put '~' before the number
