@@ -54,8 +54,6 @@ private:
 
 namespace {
 
-//vector<datatrans::ParameterizedFunction*> parameterized; // also used by VM
-
 /// operators used in VM code
 enum DataTransformVMOperator
 {
@@ -71,13 +69,12 @@ enum DataTransformVMOperator
     OP_NUMBER,
     OP_OR, OP_AFTER_OR, OP_AND, OP_AFTER_AND, OP_NOT,
     OP_TERNARY, OP_TERNARY_MID, OP_AFTER_TERNARY, OP_DELETE_COND,
-    OP_GT, OP_GE, OP_LT, OP_LE, OP_EQ, OP_NEQ, OP_NCMP_HACK,
+    OP_GT, OP_GE, OP_LT, OP_LE, OP_EQ, OP_NEQ,
     OP_RANGE, OP_INDEX, OP_x_IDX,
     OP_ASSIGN_X, OP_ASSIGN_Y, OP_ASSIGN_S, OP_ASSIGN_A,
     OP_DO_ONCE, OP_RESIZE, OP_ORDER, OP_DELETE, OP_BEGIN, OP_END,
     OP_END_AGGREGATE, OP_AGCONDITION,
     OP_AGSUM, OP_AGMIN, OP_AGMAX, OP_AGAREA, OP_AGAVG, OP_AGSTDDEV,
-    OP_PARAMETERIZED, OP_PLIST_BEGIN, OP_PLIST_SEP, OP_PLIST_END,
     OP_FUNC, OP_SUM_F, OP_SUM_Z, OP_NUMAREA, OP_FINDX, OP_FIND_EXTR
 };
 
@@ -276,7 +273,6 @@ void ExpressionParser::put_var(int op)
 //    OP_ASSIGN_X, OP_ASSIGN_Y, OP_ASSIGN_S, OP_ASSIGN_A,
 //    OP_DO_ONCE, OP_RESIZE, OP_ORDER, OP_DELETE, OP_BEGIN, OP_END,
 //
-//    OP_PARAMETERIZED, OP_PLIST_BEGIN, OP_PLIST_SEP, OP_PLIST_END,
 //    OP_FUNC, OP_SUM_F, OP_SUM_Z, OP_NUMAREA, OP_FINDX, OP_FIND_EXTR
 
 
