@@ -5,6 +5,7 @@ User-visible changes in version 0.9.3  (2010-0 -  ):
 * syntax: so-called parametrized-functions spline[] and interpolate[]
   are replaced by so-called variadic functions Spline() and Polyline().
   The GUI in the Baseline Mode handles a separate baseline for each dataset now.
+* abandoned syntax like 5<x<10, use 5<x and x<10
 
 User-visible changes in version 0.9.2  (2010-05-07):
 * To compile fityk, Boost (only headers) and xylib must be installed first.
